# OpenBCSim

./: .gitignore  COMPILE_INSTRUCTIONS.txt  COMPILE_VISUAL_STUDIO.md  GPU_COMPILE_NOTES.txt  HOWTO_PYTHON.md  LICENSE  NOTICE  PAPER_RESULTS_UBUNTU.py  PAPER_RESULTS_UBUNTU_SERVER.py  PAPER_RESULTS_WINDOWS.py  README.md  create_all_phantoms.py
matlab/: merge_lut_parts.py  multi_cpu_simulate.py  sim_lut_hdf5.m  sim_profile_cardiac.m
phantom_data/: real_left_ventricle_contraction.h5
phantom_scripts/: 3d_rotation_demo.py  bsplines.py  carotid_bifurcation.py  contracting_cylinder_spline.py  cyst_phantom_2d.py  deform_cylinder_3d.py  deform_cylinder_3d_spline.py  harmonic_box.py  lv_model_3d.py  lv_spline_model.py  phantom_common.py  realistic_artery.py  render_single_scatterer_spline.py  rotating_cube.py  rotating_plaque.py  rotation3d.py  simple.py  spinning_disc.py  spline_noise.py  splined_loader.py  tissue_with_flow.py  utils.py
python/: benchmark_paper.py  compare_cpu_gpu.py  demo1.py  demo_mmode_gpu_spline_vs_fixed.py  demo_multi_gpu.py  demo_pw_doppler.py  demo_rf.py  demo_tissue_doppler.py  gpu_demo1.py  linear_scan_phantom.py  (+1 more)
src/: BCSimConfig.hpp  BCSimConvenience.cpp  BCSimConvenience.hpp  BeamConvolver.cpp  BeamConvolver.hpp  BeamProfile.cpp  BeamProfile.hpp  CMakeLists.txt  GaussPulse.hpp  HDFConvenience.cpp  HDFConvenience.hpp  LibBCSim.cpp  LibBCSim.hpp  PythonInterface.cpp  ScanSequence.cpp  ScanSequence.hpp  ScopedCpuTimer.hpp  SignalProcessing.hpp  SimpleHDF.hpp  bcsim_defines.h.in  bspline.hpp  discrete_hilbert_mask.hpp  fft.hpp  main.cpp  safe_omp.h  to_string.cpp  to_string.hpp
src/algorithm/: BaseAlgorithm.cpp  BaseAlgorithm.hpp  BaseColeAlgorithm.cpp  BaseColeAlgorithm.hpp  CpuBaseAlgorithm.cpp  CpuBaseAlgorithm.hpp  CpuFixedAlgorithm.cpp  CpuFixedAlgorithm.hpp  CpuSplineAlgorithm.cpp  CpuSplineAlgorithm.hpp  CudaBaseAlgorithm.cpp  CudaBaseAlgorithm.cu  CudaBaseAlgorithm.cuh  CudaBaseAlgorithm.hpp  CudaFixedAlgorithm.cu  CudaFixedAlgorithm.cuh  CudaSplineAlgorithm.cu  CudaSplineAlgorithm.cuh  CudaSplineAlgorithm1.cu  CudaSplineAlgorithm1.cuh  CudaSplineAlgorithm2.cu  CudaSplineAlgorithm2.cuh  FixedAlgorithm.cpp  FixedAlgorithm.hpp  FixedColeAlgorithm.cpp  FixedColeAlgorithm.hpp  GpuBaseAlgorithm.cu  GpuBaseAlgorithm.cuh  GpuFixedAlgorithm.cu  GpuFixedAlgorithm.cuh  GpuSplineAlgorithm1.cu  GpuSplineAlgorithm1.cuh  GpuSplineAlgorithm2.cu  GpuSplineAlgorithm2.cuh  SplineAlgorithm.cpp  SplineAlgorithm.hpp  SplineColeAlgorithm.cpp  SplineColeAlgorithm.hpp  common_utils.hpp  cuda_debug_utils.h  (+3 more)
src/benchmark/: CMakeLists.txt  cufft_speedtest.cu  gpu_3d_texture_example.cu  gpu_memcpy_speedtest.cu  gpu_render_spline_comparison.cu  gpu_texture_example.cu
src/cartesianator/: Cartesianator.cpp  Cartesianator.hpp
src/core/: BCSimConfig.hpp  BeamConvolver.cpp  BeamProfile.cpp  CMakeLists.txt  LibBCSim.cpp  LibBCSim.hpp  ScanSequence.cpp  ScanSequence.hpp  bspline.hpp  export_macros.hpp  fft.cpp  to_string.hpp  vector3.hpp
src/core/algorithm/: BaseAlgorithm.cpp  BaseAlgorithm.hpp  CpuAlgorithm.cpp  CpuAlgorithm.hpp  CpuBaseAlgorithm.cpp  CpuBaseAlgorithm.hpp  CpuFixedAlgorithm.cpp  CpuFixedAlgorithm.hpp  CpuSplineAlgorithm.cpp  CpuSplineAlgorithm.hpp  GpuAlgorithm.cpp  GpuAlgorithm.hpp  GpuBaseAlgorithm.cpp  GpuBaseAlgorithm.cu  GpuBaseAlgorithm.cuh  GpuBaseAlgorithm.hpp  GpuFixedAlgorithm.cpp  GpuFixedAlgorithm.cu  GpuFixedAlgorithm.cuh  GpuFixedAlgorithm.hpp  GpuScatterers.cpp  GpuScatterers.hpp  GpuSplineAlgorithm1.cpp  GpuSplineAlgorithm1.cu  GpuSplineAlgorithm1.cuh  GpuSplineAlgorithm1.hpp  GpuSplineAlgorithm2.cpp  GpuSplineAlgorithm2.cu  GpuSplineAlgorithm2.hpp  common_definitions.h  common_utils.hpp  cuda_helpers.h  cuda_kernels_c_interface.cu  cuda_kernels_c_interface.h  cuda_kernels_common.cu  cuda_kernels_common.cuh  cuda_kernels_fixed.cu  cuda_kernels_fixed.cuh  cuda_kernels_spline1.cu  cuda_kernels_spline1.cuh  (+5 more)
src/core/unittest/: CMakeLists.txt  test_fft.cpp  test_hilbert_mask.cpp  test_linalg.cpp
src/examples/: CMakeLists.txt  bcsim_demo.cpp  examples_common.hpp  gpu_example1.cpp  gpu_example2.cpp
src/python/: CMakeLists.txt  PythonInterface.cpp
src/qt5gui/: BeamProfileWidget.cpp  BeamProfileWidget.hpp  CMakeLists.txt  DisplayWidget.cpp  DisplayWidget.hpp  ExcitationSignalWidget.cpp  ExcitationSignalWidget.hpp  GLScattererWidget.cpp  GLScattererWidget.hpp  GLVisualizationWidget.cpp  GLVisualizationWidget.hpp  GrayscaleTransformWidget.cpp  GrayscaleTransformWidget.hpp  IConfig.hpp  ImageExport.cpp  ImageExport.hpp  LogWidget.cpp  LogWidget.hpp  MainWindow.cpp  MainWindow.hpp  ProbeWidget.cpp  ProbeWidget.hpp  QFileAdapter.cpp  QFileAdapter.hpp  QSettingsConfigAdapter.cpp  QSettingsConfigAdapter.hpp  RefreshWorker.hpp  ScanSeqModel.hpp  ScattererModel.cpp  ScattererModel.hpp  SimTimeManager.hpp  SimTimeWidget.hpp  SimulationParamsWidget.cpp  SimulationParamsWidget.hpp  SplineCurve.hpp  main.cpp  utils.cpp  utils.hpp
src/qt5gui/resources/: left_ventricle_contraction.csv  resources.qrc  scanseq_fshader.glsl  scatterer_fshader.glsl  scatterer_vshader.glsl  settings.ini
src/qt5gui/scanseq/: LinearScanseqWidget.cpp  LinearScanseqWidget.hpp  ScanseqWidget.cpp  ScanseqWidget.hpp  SectorScanseqWidget.cpp  SectorScanseqWidget.hpp
src/qt5gui/trianglemesh3d/: CMakeLists.txt  TriangleMesh3d.cpp  TriangleMesh3d.hpp  WavefrontObjLoader.cpp  WavefrontObjLoader.hpp
src/unittest/: CMakeLists.txt  test_direct_conv.cpp  test_fft.cpp  test_hilbert_mask.cpp  test_linalg.cpp  test_main.cpp
src/utils/: BCSimConvenience.cpp  BCSimConvenience.hpp  CMakeLists.txt  CSVReader.cpp  CSVReader.hpp  ConsoleLog.hpp  DefaultPhantoms.cpp  DefaultPhantoms.hpp  DemoPhantoms.cpp  EllipsoidGeometry.cpp  EllipsoidGeometry.hpp  GaussPulse.cpp  GaussPulse.hpp  HDFConvenience.cpp  HDFConvenience.hpp  HardwareAutodetection.cpp  HardwareAutodetection.hpp  ScanGeometry.hpp  SignalProcessing.cpp  SignalProcessing.hpp  rotation3d.hpp
src/utils/cartesianator/: Cartesianator.cpp  Cartesianator.hpp
src/utils/unittest/: CMakeLists.txt  test_CSVReader.cpp  test_SignalProcessing.cpp
(+12 files in other folders)
